[package]
name = "network_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.7.1"
ipnetwork = "0.20.0"
pnet = "0.31.0"
pnet_datalink = "0.31.0"
tokio = {version="1.24.1", features=["full"]}

